# gtk_cmake

./: CMakeLists.txt  hello.c
